# CI_CD

./: CMakeLists.txt  Dockerfile
.github/workflows/: Docker.yml  cmake.yml
src/: main.c
src/lib/: CMakeLists.txt  sum.c  sum.h
tests/: CMakeLists.txt  test_sum.c
